--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
     <h1 style="text-align: center; color: brown;margin-top: 200px;">
-        <b>Welcome To JavaScript World !!!!</b>
+        <b>Welcome To JavaScript World !!!</b>
     </h1>
 
     <script src="main.js"></script>
