Added Div In index.html

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 
-
+<div>
     <h1 style="text-align: center; color: brown;margin-top: 200px;">
         <b>Welcome To JavaScript World !!!</b>
     </h1>
 
     <script src="main.js"></script>
-    
+</div>
 </body>
 </html>
